--- a/CustomDialog/CustomDialog.csproj
+++ b/CustomDialog/CustomDialog.csproj
@@ -21,6 +21,9 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.6" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.6" />
+        <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.6" />
+        <PackageReference Include="Avalonia.Xaml.Interactions" Version="11.0.6" />
+        <PackageReference Include="Avalonia.Xaml.Interactivity" Version="11.0.6" />
         <PackageReference Include="Semi.Avalonia" Version="11.0.1" />
         <PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="20.0.4" />
     </ItemGroup>
