--- a/CustomDialog/CustomDialog.csproj
+++ b/CustomDialog/CustomDialog.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.6" />
         <PackageReference Include="Avalonia.Xaml.Interactions" Version="11.0.6" />
         <PackageReference Include="Avalonia.Xaml.Interactivity" Version="11.0.6" />
+        <PackageReference Include="FluentAvaloniaUI" Version="2.0.5" />
         <PackageReference Include="Semi.Avalonia" Version="11.0.1" />
         <PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="20.0.4" />
     </ItemGroup>
