--- a/CustomDialogLibrary/CustomDialogLibrary.csproj
+++ b/CustomDialogLibrary/CustomDialogLibrary.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Avalonia" Version="11.0.9" />
       <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.0.9" />
       <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.9" />
+      <PackageReference Include="DynamicData" Version="8.3.27" />
     </ItemGroup>
 
     <ItemGroup>
