--- a/CustomDialogLibrary/CustomDialogLibrary.csproj
+++ b/CustomDialogLibrary/CustomDialogLibrary.csproj
@@ -7,9 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Avalonia" Version="11.0.9" />
-      <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.0.9" />
-      <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.9" />
+      <PackageReference Include="Avalonia" Version="11.0.6" />
+      <PackageReference Include="Avalonia.Controls.DataGrid" Version="11.0.6" />
+      <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.6" />
       <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.0.6" />
       <PackageReference Include="Avalonia.Xaml.Interactions" Version="11.0.6" />
       <PackageReference Include="Avalonia.Xaml.Interactivity" Version="11.0.6" />
@@ -17,8 +17,11 @@
       <PackageReference Include="FluentAvaloniaUI" Version="2.0.5" />
     </ItemGroup>
 
-    <ItemGroup>
-        <AvaloniaResource Include="BakedAssets\**" />
+    <ItemGroup Label="Embedded">
+        <EmbeddedResource Include="BakedAssets\*.png"
+                          Label="Icons"/>
+        <EmbeddedResource Include="BakedAssets\Extensions\*.png"
+                          Label="ExtensionsIcons"/>
     </ItemGroup>
 
     <ItemGroup>
