--- a/DemoApp/DemoApp.csproj
+++ b/DemoApp/DemoApp.csproj
@@ -27,6 +27,7 @@
         <PackageReference Include="DynamicData" Version="8.3.27" />
         <PackageReference Include="FluentAvaloniaUI" Version="2.0.5" />
         <PackageReference Include="Semi.Avalonia" Version="11.0.1" />
+        <PackageReference Include="Semi.Avalonia.DataGrid" Version="11.0.7" />
         <PackageReference Include="TestableIO.System.IO.Abstractions.Wrappers" Version="20.0.4" />
     </ItemGroup>
 
