Behavior like file dialog, but not like explorer on file choosing window closes (file returning is not implemented yet)

--- a/CustomDialogLibrary/CustomDialogLibrary.csproj
+++ b/CustomDialogLibrary/CustomDialogLibrary.csproj
@@ -23,4 +23,15 @@
                           Label="ExtensionsIcons"/>
     </ItemGroup>
     
+    <ItemGroup>
+        <AvaloniaResource Include="BakedAssets\*.ico" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Update="Views\MainWindow.axaml.cs">
+        <DependentUpon>MainWindow.axaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
+    </ItemGroup>
+    
 </Project>
